# super-changelog

./: .coverage  .gitignore  CHANGELOG.md  CODEOWNERS.md  COMMUNITY.md  CONTRIBUTING.md  README.md  code.json  pyproject.toml  requirements.txt
.github/workflows/: auto-changelog.yml  changelog.yml  contributors.yml  get-history.yml  updateCodeJSON.yml
changelog_data/data/: historical_changelog_2026-05-01_to_2026-05-14.json  weekly_changelog_2025-06-18_to_2025-06-25.json  weekly_changelog_2025-07-15_to_2025-07-22.json  weekly_changelog_2025-07-17_to_2025-07-24.json  weekly_changelog_2025-08-07_to_2025-08-14.json  weekly_changelog_2025-08-10_to_2025-08-17.json  weekly_changelog_2025-08-14_to_2025-08-21.json  weekly_changelog_2025-08-15_to_2025-08-22.json  weekly_changelog_2025-08-17_to_2025-08-24.json  weekly_changelog_2025-08-21_to_2025-08-28.json  weekly_changelog_2025-08-24_to_2025-08-31.json  weekly_changelog_2025-08-28_to_2025-09-04.json  weekly_changelog_2025-08-31_to_2025-09-07.json  weekly_changelog_2025-09-05_to_2025-09-12.json  weekly_changelog_2025-09-07_to_2025-09-14.json  weekly_changelog_2025-09-14_to_2025-09-21.json  weekly_changelog_2025-09-21_to_2025-09-28.json  weekly_changelog_2025-09-28_to_2025-10-05.json  weekly_changelog_2025-10-03_to_2025-10-10.json  weekly_changelog_2025-10-10_to_2025-10-17.json  weekly_changelog_2025-10-17_to_2025-10-24.json  (+36 more)
data/: changelog.json  changelog25-04-11.json
scripts/: __init__.py  create_pr.py  create_pr_condensed.py  generate_changelog.py  generate_changelog_all.py  generate_changelog_archival.py  generate_changelog_weekly.py  generate_summary.py  generate_summary_condensed.py  run_weekly.py  util.py
tests/: conftest.py  test_create_pr.py  test_generate_summary.py  test_util.py
(+320 files in other folders)
